# YOLOv8-BeyondEarth

./: README.md  pyproject.toml  requirements.txt
resources/nb/: example_of_tiled_predictions.ipynb  example_of_tiled_predictions_fast.ipynb  hirise_priority10_detection.ipynb  sam2_experiments.ipynb  test_orientation_bug.ipynb  yolo_pipeline_resolution_investigation.ipynb
resources/slurm/: run_orientation_notebook.sh
src/YOLOv8BeyondEarth/: SAM2_predict.py  custom_datasets.py  polygon.py  predict.py
